[project]
name = "comfyui-recraftai"
description = "Recraft AI API Custom Nodes"
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["requests", "torch", "Pillow", "numpy"]

[project.urls]
Repository = "https://github.com/recraft-ai/ComfyUI-RecraftAI"

[tool.comfy]
PublisherId = "recraftai"
DisplayName = "ComfyUI-RecraftAI"
Icon = "https://www.recraft.ai/favicons/icon-192.png"
